<resources>
    <string name="app_name" translatable="false">VKM</string>

    <string name="message_action_created_chat">Created chat %s</string>
    <string name="message_action_invited_user">Invited %s to chat</string>
    <string name="message_action_kicked_user">Kicked %s from chat</string>
    <string name="message_action_returned_to_chat">%s Returned to chat</string>
    <string name="message_action_left_from_chat">%s Left from chat</string>
    <string name="message_action_updated_photo">%s Updated chat photo</string>
    <string name="message_action_removed_photo">%s Removed chat photo</string>
    <string name="message_action_updated_title">%s Updated chat title</string>
    <string name="message_action_pinned_message">%s Pinned message</string>
    <string name="message_action_unpinned_message">%s Unpinned message</string>
    <string name="message_action_invited_by_link">%s Invited by link</string>

    <string name="message_fwd_one">Forwarded message</string>
    <string name="message_fwd_many">%d Forwarded messages</string>

    <string name="message_attachments_many">Attachments</string>
    <string name="message_attachment_photo">Photo</string>
    <string name="message_attachment_video">Video</string>
    <string name="message_attachment_audio">Audio</string>
    <string name="message_attachment_doc">Document</string>
    <string name="message_attachment_link">Link</string>
    <string name="message_attachment_sticker">Sticker</string>
    <string name="message_attachment_gift">Gift</string>
    <string name="message_attachment_graffiti">Graffiti</string>
    <string name="message_attachment_voice">Voice message</string>
    <string name="message_attachment_poll">Poll</string>
    <string name="message_attachment_call">Call</string>

    <string name="message_attachment_photos">%d Photos</string>
    <string name="message_attachment_videos">%d Videos</string>
    <string name="message_attachment_audios">%d Audios</string>
    <string name="message_attachment_docs">%d Documents</string>

    <string name="activity_login">Login</string>

    <string name="navigation_search">Search</string>
    <string name="navigation_conversations">Conversations</string>
    <string name="navigation_friends">Friends</string>
    <string name="navigation_important">Important</string>
    <string name="navigation_settings">Settings</string>

    <string name="message_date_yesterday">Yesterday</string>
    <string name="drawer_name_surname">Name Surname</string>
    <string name="drawer_status">Status</string>
    <string name="pref_account_logout_title">Logout</string>

    <string name="time_format_now">now</string>
    <string name="time_format_second">%ds</string>
    <string name="time_format_minute">%dm</string>
    <string name="time_format_hour">%dh</string>
    <string name="time_format_day">%dd</string>
    <string name="time_format_month">%dm</string>
    <string name="time_format_year">%dy</string>
    <string name="prefs_about_app_version_title">Application version</string>
    <string name="prefs_about_app_version_summary">Tap to check updates</string>
    <string name="prefs_about_app_chiefs_title">Application chiefs and helpers</string>
    <string name="prefs_about">About</string>
    <string name="prefs_account">Account</string>
    <string name="chat_message_hint">Type&#8230;</string>
    <string name="token">Token</string>
    <string name="custom_data">Custom data</string>
    <string name="user_id">User Id</string>
    <string name="prefs_appearance">Appearance</string>
    <string name="pref_appearance_extended_conversations_title">Conversations type</string>
    <string name="loading">Loading&#8230;</string>

    <string name="user_online">Online</string>
    <string name="user_online_mobile">Online from mobile</string>
    <string name="user_offline">Offline</string>
    <string name="user_last_seen_at">Last seen at %s</string>

    <string name="chat_members">%d members</string>

    <string name="group_channel_members">Channel • %d members</string>
    <string name="voice_record_tip"><![CDATA[Press & hold to record voice]]></string>
    <string name="no_connection">No connection</string>
    <string name="update">Update</string>
    <string name="project_vkm">Project.VKM</string>
    <string name="enter">Enter</string>
    <string name="no_access">No access</string>

    <string name="dialog_is_empty">Dialog is empty</string>
    <string name="list_is_empty">List is empty</string>

    <string name="update_state_downloading">Downloading&#8230;</string>
    <string name="update_state_checking">Checking&#8230;</string>
    <string name="update_state_no_updates">No updates</string>
    <string name="update_current_version">Current version: %s</string>
    <string name="update_last_check_time">Last update check in %s</string>
    <string name="update_changelog">Changelog: %s</string>
    <string name="update_check_updates">Check updates</string>
    <string name="update_state_update_available">Update is available</string>
    <string name="update_new_version">Version: %s</string>
    <string name="update_download">Download</string>
    <string name="messages_refresh">Refresh</string>

    <string name="today">Today</string>
    <string name="start_screen_login_settings">Login settings</string>
    <string name="in_progress_placeholder">In progress</string>

    <string name="yesterday">Yesterday</string>

    <string name="refresh">Refresh</string>

    <string name="edited">Edited</string>

    <string name="conversations_is_empty">No conversations</string>
    <string name="friends_is_empty">No friends :(</string>
    =======
    <string name="start_screen_login_settings">Login settings</string>
    <string name="in_progress_placeholder">In progress</string>
    <string name="prefs_general">General</string>

    <string name="fragment_settings_general_hide_keyboard_on_scroll_up_title">Hide the keyboard while scrolling up</string>
    >>>>>>> Stashed changes

    <string name="access_error">Access error</string>

    <string name="pref_appearance_dark_theme_title">Dark theme</string>

    <string name="dark_theme_never">Never</string>
    <string name="dark_theme_always">Always</string>
    <string name="dark_theme_by_system">By system</string>
    <string name="dark_theme_by_power_saving">By power saving</string>

</resources>
