<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/navigationSearch"
            android:icon="@drawable/ic_search"
            android:title="@string/navigation_search" />

        <item
            android:id="@+id/navigationConversations"
            android:icon="@drawable/ic_message_outline"
            android:title="@string/navigation_conversations" />

        <item
            android:id="@+id/navigationFriends"
            android:icon="@drawable/ic_people_outline"
            android:title="@string/navigation_friends" />

        <item
            android:id="@+id/navigationImportant"
            android:icon="@drawable/ic_star_border"
            android:title="@string/navigation_important" />

        <item
            android:id="@+id/navigationSettings"
            android:icon="@drawable/ic_settings_outline"
            android:title="@string/navigation_settings" />

    </group>

</menu>